<resources>
    <string name="app_name">chat_app1204</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="logout">Logout</string>
    <string name="setting">Settings</string>
    <string name="create_group">Create Group</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="all">All</string>
    <string name="chat">Chat</string>
    <string name="groups">Groups</string>
    <string name="type_message">Type a message...</string>
    <string name="search">Search...</string>
    <string name="notifications">Notifications</string>
    <string name="no_notifications_yet">No notifications yet</string>
    <string name="setting_header">System Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <string-array name="languages">
        <item>English</item>
        <item>Tiếng Việt</item>
    </string-array>
</resources>